debugging image cover issue on mobile

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -44,19 +44,11 @@ section.timeline-component {
     /* background-color: black; */
 
     height: 100vh;
+    width: 100vw;
     background: url('../img/timeline/snow_up_bw_white.png');
     background-size: cover;    
 }
 
-.timeline-wrapper {
-    height: 100vh;
-    
-    /* background: linear-gradient(180deg, rgba(0, 0, 0, 0.0) 70%, rgba(0, 0, 0, 1)), 
-                url('../img/timeline/snow_up_bw_white.png'); */
-      
-    background: url('../img/timeline/snow_up_bw_white.png');
-    background-size: cover;    
-}
 
 .footer {
     height: 200px;
